--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -124,6 +124,330 @@ intro_profile=Set up your personal profile with information like job title and i
 intro_account=Manage your user account including name, password, email and mobile.
 intro_log_out=Go here to log out of the system and deny others to access your user account.
 
+#-- See module privilegies ----------------------------------------------------#
+
+M_dhis-web-maintenance=Maintenance app
+M_dhis-web-data-administration=Data Administration app
+M_dhis-web-settings=Settings app
+M_dhis-web-dataentry=Data Entry app
+M_dhis-web-importexport=Import-Export app
+M_dhis-web-validationrule=Validation Rule app
+M_dhis-web-data-quality=Data Quality app
+M_dhis-web-gis=GIS app
+M_dhis-web-reporting=Report app
+M_dhis-web-interpretation=Interpretation app
+M_dhis-web-datastore=Datastore app
+M_dhis-web-messaging=Messaging app
+M_dhis-web-dashboard=Dashboard app
+M_dhis-web-mapping=GIS app
+M_dhis-web-maps=Maps app
+M_dhis-web-event-reports=Event Reports app
+M_dhis-web-app-management=App Management app
+M_dhis-web-usage-analytics=Usage Analytics app
+M_dhis-web-light=Light app
+M_dhis-web-mobile=Smartphone app
+M_dhis-web-visualizer=Classic Data Visualizer app
+M_dhis-web-maintenance-mobile=Mobile Maintenance app
+M_dhis-web-pivot=Pivot Table app
+M_dhis-web-sms=SMS app
+M_dhis-web-event-capture=Event Capture app
+M_dhis-web-tracker-capture=Tracker Capture app
+M_dhis-web-event-visualizer=Event Visualizer app
+M_dhis-web-cache-cleaner=Browser Cache Cleaner app
+M_dhis-web-translations=Translations app
+M_dhis-web-menu-management=Menu Management app
+M_dhis-web-user=Users app
+M_dhis-web-scheduler=Scheduler app
+M_dhis-web-capture=Capture app
+M_dhis-web-data-visualizer=Data Visualizer app
+
+#-- User action privilegies ---------------------------------------------------#
+
+F_CONCEPT_=Add/Update Concept
+F_METADATA_MANAGE=Metadata sync
+F_CONSTANT_ADD=Add/Update Constant
+F_CONSTANT_DELETE=Delete Constant
+F_CONSTANT_MANAGEMENT=Constant Management
+F_DATAADMIN_LOCK=Data Admin Locking
+F_DATAADMIN_UNLOCK=Data Admin Unlocking
+F_DATAELEMENT_PUBLIC_ADD=Add/Update Public Data Element
+F_DATAELEMENT_PRIVATE_ADD=Add/Update Private Data Element
+F_DATAELEMENT_DELETE=Delete Data Element
+F_CATEGORY_PUBLIC_ADD=Add/Update Public Category
+F_CATEGORY_PRIVATE_ADD=Add/Update Private Category
+F_CATEGORY_DELETE=Delete Category
+F_CATEGORY_OPTION_PUBLIC_ADD=Add/Update Public Category Option
+F_CATEGORY_OPTION_PRIVATE_ADD=Add/Update Private Category Option
+F_CATEGORY_OPTION_DELETE=Delete Category Option
+F_CATEGORY_COMBO_PUBLIC_ADD=Add/Update Public Category Combo
+F_CATEGORY_COMBO_PRIVATE_ADD=Add/Update Private Category Combo
+F_CATEGORY_COMBO_DELETE=Delete Category Combo
+F_CATEGORY_OPTION_GROUP_PUBLIC_ADD=Add/Update Public Category Option Group
+F_CATEGORY_OPTION_GROUP_PRIVATE_ADD=Add/Update Private Category Option Group
+F_CATEGORY_OPTION_GROUP_DELETE=Delete Category Option Group
+F_CATEGORY_OPTION_GROUP_SET_PUBLIC_ADD=Add/Update Public Category Option Group Set
+F_CATEGORY_OPTION_GROUP_SET_PRIVATE_ADD=Add/Update Private Category Option Group Set
+F_CATEGORY_OPTION_GROUP_SET_DELETE=Delete Category Option Group Set
+F_DATAELEMENTGROUP_PUBLIC_ADD=Add/Update Public Data Element Groups
+F_DATAELEMENTGROUP_PRIVATE_ADD=Add/Update Private Data Element Groups
+F_DATAELEMENTGROUP_DELETE=Delete Data Element Groups
+F_DATAELEMENTGROUPSET_PUBLIC_ADD=Add/Update Public Data Element Group Sets
+F_DATAELEMENTGROUPSET_PRIVATE_ADD=Add/Update Private Data Element Group Sets
+F_DATAELEMENTGROUPSET_DELETE=Delete Data Element Group Sets
+F_DATAELEMENT_MINMAX_ADD=Add/Update Min/max rule
+F_DATAELEMENT_MINMAX_DELETE=Delete Min/max rule
+F_DATASET_PUBLIC_ADD=Add/Update Public Data Set
+F_DATASET_PRIVATE_ADD=Add/Update Private Data Set
+F_DATASET_DELETE=Delete Data Set
+F_DATASET_LOCK=Lock Data Set
+F_SECTION_ADD=Add/Update Section
+F_SECTION_DELETE=Delete Section
+F_DATAVALUE_ADD=Add/Update Data Value
+F_DATAVALUE_DELETE=Delete Data Value
+F_IGNORE_TRACKER_REQUIRED_VALUE_VALIDATION=Ignore validation of required fields in Tracker and Event Capture
+F_INDICATOR_PUBLIC_ADD=Add/Update Public Indicator
+F_INDICATOR_PRIVATE_ADD=Add/Update Private Indicator
+F_INDICATOR_DELETE=Delete Indicator
+F_INDICATORTYPE_ADD=Add/Update Indicator Type
+F_INDICATORTYPE_DELETE=Delete Indicator Type
+F_INDICATORGROUP_PUBLIC_ADD=Add/Update Public Indicator Group
+F_INDICATORGROUP_PRIVATE_ADD=Add/Update Private Indicator Group
+F_INDICATORGROUP_DELETE=Delete Indicator Group
+F_INDICATORGROUPSET_PUBLIC_ADD=Add/Update Public Indicator Group Sets
+F_INDICATORGROUPSET_PRIVATE_ADD=Add/Update Private Indicator Group Sets
+F_INDICATORGROUPSET_DELETE=Delete Indicator Group Sets
+F_ORGANISATIONUNIT_ADD=Add/Update Organisation Unit
+F_ORGANISATIONUNIT_DELETE=Delete Organisation Unit
+F_ORGANISATIONUNIT_MOVE=Move Organisation Unit
+F_ORGUNITGROUP_PUBLIC_ADD=Add/Update Public Organisation Unit Group
+F_ORGUNITGROUP_PRIVATE_ADD=Add/Update Private Organisation Unit Group
+F_ORGUNITGROUP_DELETE=Delete Organisation Unit Group
+F_ORGUNITGROUPSET_PUBLIC_ADD=Add/Update Public Organisation Unit Group Set
+F_ORGUNITGROUPSET_PRIVATE_ADD=Add/Update Private Organisation Unit Group Set
+F_ORGUNITGROUPSET_DELETE=Delete Organisation Unit Group Set
+F_ORGANISATIONUNITLEVEL_UPDATE=Update Organisation Unit Level
+F_USERROLE_PUBLIC_ADD=Add/Update Public User Role
+F_USERROLE_PRIVATE_ADD=Add/Update Private User Role
+F_USERROLE_DELETE=Delete User Role
+F_USERROLE_LIST=List User Roles
+F_USERGROUP_PUBLIC_ADD=Add/Update Public User Group
+F_USERGROUP_PRIVATE_ADD=Add/Update Private User Group
+F_USERGROUP_DELETE=Delete User Group
+F_USERGROUP_LIST=List User Groups
+F_USERGROUP_MANAGING_RELATIONSHIPS_ADD=Add/Update User Group Managing Relationships
+F_USERGROUP_MANAGING_RELATIONSHIPS_VIEW=View User Group Managing Relationships
+F_USER_GROUPS_READ_ONLY_ADD_MEMBERS=Add/Remove Members In Read-Only User Groups
+F_USER_ADD=Add/Update User
+F_USER_DELETE=Delete User
+F_USER_VIEW=View User
+F_USER_ADD_WITHIN_MANAGED_GROUP=Add/Update User Within Managed Group
+F_USER_DELETE_WITHIN_MANAGED_GROUP=Delete User Within Managed Group
+F_USER_VIEW_WITHIN_MANAGED_GROUP=View User Within Managed Group
+F_VALIDATIONRULE_PUBLIC_ADD=Add/Update Public Validation Rule
+F_VALIDATIONRULE_PRIVATE_ADD=Add/Update Private Validation Rule
+F_VALIDATIONRULE_DELETE=Delete Validation Rule
+F_VALIDATIONRULEGROUP_PUBLIC_ADD=Add/Update Public Validation Rule Group
+F_VALIDATIONRULEGROUP_PRIVATE_ADD=Add/Update Private Validation Rule Group
+F_VALIDATIONRULEGROUP_DELETE=Delete Validation Rule Group
+F_GIS_CONFIGURATION_UPDATE=Change GIS Configuration
+F_REPORT_PUBLIC_ADD=Add/Update Public Report
+F_REPORT_PRIVATE_ADD=Add/Update Private Report
+F_REPORT_DELETE=Delete Report
+F_REPORTTABLE_PUBLIC_ADD=Add/Update Public Report Table
+F_REPORTTABLE_EXTERNAL=Report Table External Access
+F_REPORTTABLE_DELETE=Delete Report Table
+F_REPORT_VIEW=View Report
+F_CHART_PUBLIC_ADD=Add/Update Public Chart
+F_DASHBOARD_PUBLIC_ADD=Add/Update Public Dashboard
+F_CHART_EXTERNAL=Chart External Access
+F_CHART_ADD=Add/Update Chart
+F_CHART_DELETE=Delete Chart
+F_DOCUMENT_PUBLIC_ADD=Add/Update Public Document
+F_DOCUMENT_PRIVATE_ADD=Add/Update Private Document
+F_DOCUMENT_DELETE=Delete Document
+F_EXCEL_REPORT_ADMINISTRATION=Excel Reporting Administration
+F_RELATIONSHIPTYPE_DELETE=Delete Relationship Type
+F_RELATIONSHIPTYPE_ADD=Add Relationship Type
+F_RELATIONSHIPTYPE_UPDATE=Update Relationship Type
+F_ORGANISATION_REGISTRATION=Organisation Unit Registration
+F_PREDICTOR_ADD=Add data predictor
+F_PREDICTOR_UPDATE=Update data predictor
+F_PREDICTOR_DELETE=Delete data predictor
+F_PREDICTORGROUP_ADD=Add data predictor group
+F_PREDICTORGROUP_DELETE=Delete data predictor group
+F_TRACKED_ENTITY_REMOVE_EMPTY_EVENTS=Remove Empty Tracked Entity Events
+F_ACCESS_TRACKED_ENTITY_ATTRIBUTES=View and Search Tracked Entity Attributes and Identifiers
+F_ALLOW_EDIT_TRACKED_ENTITY_ATTRIBUTES=Add/Update Tracked Entity Attributes
+F_TRACKED_ENTITY_ATTRIBUTE_PUBLIC_ADD=Add/Update Public Tracked Entity Attribute
+F_TRACKED_ENTITY_ATTRIBUTE_PRIVATE_ADD=Add/Update Private Tracked Entity Attribute
+F_TRACKED_ENTITY_ATTRIBUTE_DELETE=Delete Tracked Entity Attribute
+F_TRACKED_ENTITY_ATTRIBUTEVALUE_ADD=Add Tracked Entity Attribute Value
+F_PROGRAM_INDICATOR_PUBLIC_ADD=Add/Update Public Program Indicator
+F_PROGRAM_INDICATOR_PRIVATE_ADD=Add/Update Private Program Indicator
+F_PROGRAM_INDICATOR_DELETE=Delete Program Indicator
+F_TRACKED_ENTITY_CHANGE_LOCATION=Change Tracked Entity Instance Location
+F_TRACKED_ENTITY_FORM_MANAGEMENT=Tracked Entity Form Management
+F_TRACKED_ENTITY_FORM_ADD=Add Tracked Entity Form
+F_TRACKED_ENTITY_FORM_DELETE=Delete Tracked Entity Form
+F_PROGRAM_INSTANCE_MANAGEMENT=Program Event Management
+F_PROGRAM_INSTANCE_DELETE=Delete Program Enrollment
+F_PROGRAM_TRACKING_MANAGEMENT=Program Tracking Management
+F_PROGRAM_PUBLIC_ADD=Add/Update Public Program
+F_PROGRAM_PRIVATE_ADD=Add/Update Private Program
+F_PROGRAM_DELETE=Delete Program
+F_PROGRAM_VALIDATION=Manage Program Validation
+F_PROGRAMSTAGE_ADD=Add/Update Program Stage
+F_PROGRAMSTAGE_DELETE=Delete Program Stage
+F_PROGRAMSTAGE_SECTION_MANAGEMENT=Program Stage Section Management
+F_PROGRAMSTAGE_SECTION_ADD=Add/Update Program Stage Section
+F_PROGRAMSTAGE_SECTION_DELETE=Delete Program Stage Section
+F_PROGRAM_ATTRIBUTE_ADD=Add/Update Program Attribute
+F_PROGRAM_ATTRIBUTE_DELETE=Delete Program Attribute
+F_TRACKED_ENTITY_ADD=Add/Update Tracked Entity
+F_TRACKED_ENTITY_DELETE=Delete Tracked Entity
+F_TRACKED_ENTITY_ATTRIBUTE_EDIT=Update Tracked Entity Attribute
+F_TRACKED_ENTITY_ATTRIBUTE_VIEW=View Tracked Entity Attribute
+F_TRACKED_ENTITY_DATAVALUE_READ=Read Tracked Entity Data Value
+F_TRACKED_ENTITY_DATAVALUE_ADD=Add/Update Tracked Entity Data Value
+F_TRACKED_ENTITY_DATAVALUE_DELETE=Delete Tracked Entity Data Value
+F_TRACKED_ENTITY_INSTANCE_ADD=Add/Update Tracked Entity Instance
+F_TRACKED_ENTITY_INSTANCE_DELETE=Delete Tracked Entity Instance
+F_TRACKED_ENTITY_INSTANCE_SEARCH=Search Tracked Entity Instance
+F_TRACKED_ENTITY_INSTANCE_SEARCH_IN_ALL_ORGUNITS=Search Tracked Entity Instance in All Org Units
+F_TRACKED_ENTITY_INSTANCE_LIST=List Tracked Entity Instance
+F_TRACKED_ENTITY_INSTANCE_HISTORY=Load Tracked Entity Instance History
+F_TRACKED_ENTITY_INSTANCE_DASHBOARD=Tracked Entity Instance Dashboard
+F_TRACKED_ENTITY_INSTANCE_CHANGE_LOCATION=Change Location of Tracked Entity Instance
+F_TRACKED_ENTITY_COMMENT_ADD=Add Tracked Entity Instance Comment
+F_TRACKED_ENTITY_COMMENT_DELETE=Delete Tracked Entity Instance Comment
+F_PROGRAM_INDICATOR_MANAGEMENT=Manage Program Indicators
+F_PROGRAM_INDICATOR_GROUP_PUBLIC_ADD=Add/Update Public Program Indicator Group
+F_PROGRAM_INDICATOR_GROUP_PRIVATE_ADD=Add/Update Private Program Indicator Group
+F_PROGRAM_INDICATOR_GROUP_DELETE=Delete Program Indicator Group
+F_PROGRAM_TRACKED_ENTITY_ATTRIBUTE_GROUP_ADD=Add/Update Program Tracked Entity Attribute Group
+F_PROGRAM_TRACKED_ENTITY_ATTRIBUTE_GROUP_DELETE=Delete Program Tracked Entity Attribute Group
+F_PUSH_ANALYSIS_ADD=Add/Update Push Analysis
+F_PUSH_ANALYSIS_DELETE=Delete Push Analysis
+F_PROGRAM_STAGE_COMPLETENESS=View Program Stage Completeness Report
+F_SCHEDULING_SEND_MESSAGE=Scheduling send messages
+F_SCHEDULING_CASE_AGGREGATE_QUERY_BUILDER=Scheduling case aggregate query builder
+F_MINMAX_DATAELEMENT_ADD=Add/Update Min-Max Data Element
+F_MINMAX_DATAELEMENT_DELETE=Delete Min-Max Data Element
+F_GENERATE_PROGRAM_SUMMARY_REPORT=Generate Program Summary Report
+F_GENERATE_STATISTICAL_PROGRAM_REPORT=Generate Program Statistics Report
+F_GENERATE_BENEFICIARY_TABULAR_REPORT=Generate Tracked Entity Tabular report
+F_TRACKED_ENTITY_AGGREGATION=Tracked Entity Aggregation
+F_TRACKED_ENTITY_INSTANCE_MANAGEMENT=Tracked Entity Instance Management
+F_PROGRAM_ENROLLMENT=Add/Update Enrollment
+F_PROGRAM_UNENROLLMENT=Cancel/Delete Enrollment
+F_PROGRAM_ENROLLMENT_READ=Read Enrollment
+F_PROGRAM_STAGE_INSTANCE_DELETE=Delete Tracked Entity Instance Visit
+F_PROGRAM_TRACKING_SEARCH=Search events with registration
+F_PROGRAM_STAGE_INSTANCE_SEARCH=Search events without registration
+F_RELATIONSHIP_MANAGEMENT=Tracked Entity Relationship Management
+F_RELATIONSHIP_ADD=Add Tracked Entity Relationship
+F_RELATIONSHIP_DELETE=Delete Tracked Entity Relationship
+F_SYSTEM_SETTING=Change system settings
+F_TRACKED_ENTITY_ATTRIBUTEVALUE_DELETE=Delete Tracked Entity Attribute Value
+F_GIS_ADMIN=Administrate GIS
+F_LEGEND_ADD=Add/Update Legend
+F_LEGEND_DELETE=Delete Legend
+F_LEGEND_SET_PUBLIC_ADD=Add/Update Public Legend Set
+F_LEGEND_SET_PRIVATE_ADD=Add/Update Private Legend Set
+F_LEGEND_SET_DELETE=Delete Legend Set
+F_MAP_PUBLIC_ADD=Add Public Map
+F_MAP_EXTERNAL=Map External Access
+F_DATAMART_ADMIN=Administrate data mart
+F_SCHEDULING_ADMIN=Scheduling Administration
+F_SQLVIEW_PUBLIC_ADD=Add/Update Public SQL View
+F_SQLVIEW_PRIVATE_ADD=Add/Update Private SQL View
+F_SQLVIEW_DELETE=Delete SQL View
+F_SQLVIEW_EXECUTE=Execute SQL View
+F_SQLVIEW_MANAGEMENT=SQL View Management
+F_SQLVIEW_EXTERNAL=SQL View External Access
+F_VALIDATIONCRITERIA_ADD=Add/Update Validation Criteria
+F_VALIDATIONCRITERIA_DELETE=Delete Validation Criteria
+F_ATTRIBUTE_PUBLIC_ADD=Add/Update Public Attribute
+F_ATTRIBUTE_PRIVATE_ADD=Add/Update Private Attribute
+F_ATTRIBUTE_DELETE=Delete Attribute
+F_OPTIONSET_PUBLIC_ADD=Add/Update Public Option Set
+F_OPTIONSET_PRIVATE_ADD=Add/Update Private Option Set
+F_OPTIONSET_DELETE=Delete Option Set
+F_OPTIONGROUP_PUBLIC_ADD=Add/Update Public Option Group
+F_OPTIONGROUP_PRIVATE_ADD=Add/Update Private Option Group
+F_OPTIONGROUP_DELETE=Delete Option Group
+F_OPTIONGROUPSET_PUBLIC_ADD=Add/Update Public Option Group Set
+F_OPTIONGROUPSET_PRIVATE_ADD=Add/Update Private Option Group Set
+F_OPTIONGROUPSET_DELETE=Delete Option Group Set
+F_ANALYTICSTABLEHOOK_ADD=Add/Update Analytics Table Hook
+F_ANALYTICSTABLEHOOK_DELETE=Delete Analytics Table Hook
+F_SEND_MESSAGE=Send message
+F_OPTIONSET_MANAGEMENT=Option Set Management
+F_COLOR_SET_ADD=Add/Update Color Set
+F_COLOR_SET_DELETE=Delete Color Set
+F_DATA_MART_ADMIN=Administrate data mart
+F_MOBILE_SENDSMS=Send SMS
+F_MOBILE_SETTINGS=Set mobile settings
+F_MOBILE_DELETE_SMS=Delete SMS
+F_SEND_EMAIL=Send Email
+F_VIEW_SETTINGS=View settings
+F_PERFORM_MAINTENANCE=Perform maintenance tasks
+F_PRUNE_ORGANISATION_UNITS=Prune organisation units
+F_MERGE_ORGANISATION_UNITS=Merge organisation units
+F_ELIMINATE_DUPLICATE_DATA_ELEMENTS=Eliminate duplicate data elements
+F_GENERATE_MIN_MAX_VALUES=Generate min-max values
+F_IMPORT_DATA=Import data
+F_IMPORT_EVENTS=Import events
+F_IMPORT_OTHER_SYSTEMS=Import from other systems
+F_EXPORT_DATA=Export data
+F_EXPORT_EVENTS=Export events
+F_METADATA_IMPORT=Import metadata
+F_METADATA_EXPORT=Export metadata
+F_APPROVE_DATA=Approve data
+F_APPROVE_DATA_LOWER_LEVELS=Approve data at lower levels
+F_ACCEPT_DATA_LOWER_LEVELS=Accept data at lower levels
+F_RUN_VALIDATION=Run validation
+F_PROGRAM_TRACKING_LIST=View program tracking
+F_REPLICATE_USER=Replicate user
+F_LOCALE_ADD=Add/Update Locale
+F_LOCALE_DELETE=Delete Locale
+F_PREDICTOR_RUN=Run predictor
+F_TRACKED_ENTITY_MANAGEMENT=Manage Tracked Entities
+F_TRACKED_ENTITY_UPDATE=Update Tracked Entities
+F_VALIDATIONRULEGROUP_ADD=Add/Update Validation Rule Groups
+F_SQLVIEW_ADD=Add/Update SQL View
+F_ORGUNITGROUPSET_ADD=Add/Update Organisation Unit Group Set
+F_OPTIONSET_ADD=Add/Update Option Set
+F_INSERT_CUSTOM_JS_CSS=Insert custom Javascript and CSS
+F_VIEW_UNAPPROVED_DATA=View unapproved data
+F_PROGRAM_RULE_MANAGEMENT=Manage Program Rule
+F_PROGRAM_RULE_ADD=Add Program Rule
+F_PROGRAM_RULE_UPDATE=Update Program Rule
+F_PROGRAM_DASHBOARD_CONFIG_ADMIN=Administer program dashboard configuration
+F_OAUTH2_CLIENT_MANAGE=Manage OAuth2 Client
+F_MANAGE_TICKETS=Manage Feedback Messages
+F_EXTERNAL_MAP_LAYER_PUBLIC_ADD=Add/Update Public External Map Layer
+F_EXTERNAL_MAP_LAYER_PRIVATE_ADD=Add/Update Private External Map Layer
+F_EXTERNAL_MAP_LAYER_DELETE=Delete External Map Layer
+F_VIEW_EVENT_ANALYTICS=View event analytics
+F_ADD_COLOR_SET=Add/Update Color Set
+F_PROGRAM_RULE_DELETE=Delete Program Rule
+F_PROGRAMDATAELEMENT_DELETE=Delete Program Data Element
+F_PROGRAMDATAELEMENT_ADD=Add/Update Program Data Element
+F_LEGEND_SET_ADD=Add/Update Legend Set
+F_COLOR_ADD=Add/Update Color
+F_COLOR_DELETE=Delete Color
+F_DOCUMENT_EXTERNAL=Document External Access
+F_EVENTCHART_EXTERNAL=Event Chart External Access
+F_EVENTCHART_PUBLIC_ADD=Add/Update Event Chart
+F_EVENTREPORT_EXTERNAL=Event Report External Access
+F_EVENTREPORT_PUBLIC_ADD=Add/Update Event Report
+F_EXTERNALFILERESOURCE_ADD=Add/Update External File Resource
+F_PROGRAM_ADD=Add/Update Program
+F_REPORT_EXTERNAL=Report External Access
+F_UNCOMPLETE_EVENT=Uncomplete events
+F_SKIP_DATA_IMPORT_AUDIT=Skip data import audit
+
 #-- Common ---------------------------------------------------------------------#
 
 offline=Offline
