--- a/dhis-2/dhis-services/dhis-service-analytics/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-analytics/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
-      <artifactId>dhis-service-expression-parser</artifactId>
+      <artifactId>dhis-service-parser</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
