--- a/dhis-2/dhis-services/pom.xml
+++ b/dhis-2/dhis-services/pom.xml
@@ -31,7 +31,7 @@
     <module>dhis-service-core</module>
     <!-- Level 6 -->
     <module>dhis-service-validation</module>
-    <module>dhis-service-expression-parser</module>
+    <module>dhis-service-parser</module>
     <module>dhis-service-program-rule</module>
     <module>dhis-service-mobile</module>
     <!-- Level 7 -->
