--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -407,7 +407,7 @@
       </dependency>
       <dependency>
         <groupId>org.hisp.dhis</groupId>
-        <artifactId>dhis-service-expression-parser</artifactId>
+        <artifactId>dhis-service-parser</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
