--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1270,6 +1270,11 @@
 
       <!-- SMS -->
       <dependency>
+        <groupId>org.jsmpp</groupId>
+        <artifactId>jsmpp</artifactId>
+        <version>2.3.5</version>
+      </dependency>
+      <dependency>
         <groupId>org.rxtx</groupId>
         <artifactId>rxtx</artifactId>
         <version>2.1.7</version>
