--- a/dhis-2/dhis-api/pom.xml
+++ b/dhis-2/dhis-api/pom.xml
@@ -105,6 +105,12 @@
       <artifactId>gt-opengis</artifactId>
     </dependency>
 
+    <!-- SMPP -->
+    <dependency>
+      <groupId>org.jsmpp</groupId>
+      <artifactId>jsmpp</artifactId>
+    </dependency>
+
     <!-- Test -->
 
     <dependency>
