--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -56,7 +56,7 @@
     </dependency>
       <dependency>
         <groupId>org.hisp.dhis</groupId>
-        <artifactId>dhis-support-parser</artifactId>
+        <artifactId>dhis-support-expression-parser</artifactId>
       </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
