--- a/dhis-2/dhis-web/dhis-web-api/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-api/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-web</artifactId>
-    <version>2.31.2-SNAPSHOT</version>
+    <version>2.31.2</version>
   </parent>
 
   <artifactId>dhis-web-api</artifactId>
