--- a/dhis-2/dhis-support/dhis-support-commons/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-commons/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>dhis-support</artifactId>
     <groupId>org.hisp.dhis</groupId>
-    <version>2.31.2</version>
+    <version>2.31.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>dhis-support-commons</artifactId>
