Added docker image tag

--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_PASSOWRD: dhis
 
   e2e-test-web:
+    image: dhis2/dhis2-core:dev-latest
     build:
       dockerfile: Dockerfile
       context: ../..
