Explicitly added dhis.conf as a volume

--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       dockerfile: Dockerfile
       context: ../..
     volumes:
-      - ./config/dhis2_home:/DHIS2_home
+      - ./config/dhis2_home/dhis.conf:/DHIS2_home/dhis.conf
     depends_on:
       - db
     ports:
