--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -1288,7 +1288,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>27.0.1-jre</version>
+        <version>19.0</version>
       </dependency>
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
