Adding flag for Sao Tome and Principe

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -1380,6 +1380,7 @@ psi=PSI
 puntland=Puntland
 republic_of_trinidad_and_tobago=Republic of Trinidad & Tobago
 rwanda=Rwanda
+sao_tome_and_principe=Sao Tome and Principe
 save_the_children=Save the Children
 senegal=Senegal
 sierra_leone=Sierra Leone
