--- a/dhis-2/dhis-support/dhis-support-amqp/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-amqp/pom.xml
@@ -14,6 +14,8 @@
   <name>DHIS Artemis AMQP/JMS Support</name>
 
   <dependencies>
+  
+    <!-- DHIS -->
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-api</artifactId>
@@ -22,6 +24,8 @@
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-support-external</artifactId>
     </dependency>
+    
+    <!-- Other -->
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>artemis-server</artifactId>
