--- a/dhis-2/dhis-support/dhis-support-db-migration/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-db-migration/pom.xml
@@ -24,6 +24,8 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
+    
+    <!-- DHIS -->
     <dependency>
      <groupId>org.hisp.dhis</groupId>
      <artifactId>dhis-api</artifactId>
