--- a/dhis-2/dhis-support/dhis-support-expression-parser/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-expression-parser/pom.xml
@@ -19,7 +19,7 @@
 
     <dependency>
       <groupId>org.hisp.dhis</groupId>
-      <artifactId>dhis-support-hibernate</artifactId>
+      <artifactId>dhis-api</artifactId>
     </dependency>
 
     <!-- ANTLR -->
