Support for SMPP gateway (#3013)
* Initial commit for SMPP gateway

* Create SMPPInitializer

* minor

* Add smpp gateway tests

* Refactor SMPPClient to add support for bulk sending

* Add integration and unit test for SMPP gateway

* minor text fixes

* Add async support for SMS sending

* minor code fixes

* minor refactor

* minor refactor

* minor

* Add smpp configuration through SMS api

* minor

* SMPPClient code refactor

* update unit tests for smpp client

* Refactor and code fixes

* Store sms configuration as json string

* minor

* revert the name of sms configuration key

* Remove SMS configurations

* Revert "Store sms configuration as json string"

This reverts commit 67216d3468439304bd9e3635e4b557118b1dfa48.

* minor

--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -149,10 +149,19 @@
       <artifactId>aws-s3</artifactId>
     </dependency>
 
-    <!-- SMS -->
+    <!-- SMPP -->
     <dependency>
-      <groupId>com.googlecode.jsmpp</groupId>
+      <groupId>org.jsmpp</groupId>
       <artifactId>jsmpp</artifactId>
+      <version>2.3.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.velocity</groupId>
