--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 jobs: 
   include:
-    - stage: tests 
+    - stage: Tests
       name: unit
       script: 
         - mvn clean install -DskipTests=false -q --update-snapshots -f ./dhis-2/pom.xml
@@ -21,7 +21,13 @@ jobs:
     - name: integration
       script: 
         - mvn clean install -Pintegration -f ./dhis-2/pom.xml
-        
+
+    - name: api
+        script:
+        - cd dhis-2/dhis-e2e-test
+        - docker-compose up -d --build
+        - mvn test -DbaseUrl=http://localhost:8070/api
+        - docker-compose down
 branches:
   only:
   - master
