--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,34 @@
 language: java
-sudo : false
-dist : trusty
+sudo: false
+dist: trusty
 jdk:
 - oraclejdk8
 addons:
   apt:
     packages:
     - oracle-java8-installer
-
 before_install:
 - rm ~/.m2/settings.xml
-  
-jobs: 
+
+jobs:
   include:
-    - stage: tests 
-      name: unit
-      script: 
-        - mvn clean install -DskipTests=false -q --update-snapshots -f ./dhis-2/pom.xml
-        - mvn clean install -DskipTests=false -q --update-snapshots -f ./dhis-2/dhis-web/pom.xml
-        
-    - name: integration
-      script: 
-        - mvn clean install -Pintegration -f ./dhis-2/pom.xml
-        
-    - name: api
-      script:
-        - cd dhis-2/dhis-e2e-test
-        - docker-compose up -d --build 
-        - mvn test -DbaseUrl=http://localhost:8070/api
-        - docker-compose down
-        
+  - stage: Tests
+    name: unit
+    script:
+    - mvn clean install -DskipTests=false -q --update-snapshots -f ./dhis-2/pom.xml
+    - mvn clean install -DskipTests=false -q --update-snapshots -f ./dhis-2/dhis-web/pom.xml
+
+  - name: integration
+    script:
+    - mvn clean install -Pintegration -f ./dhis-2/pom.xml
+
+  - name: api
+    script:
+    - cd dhis-2/dhis-e2e-test
+    - docker-compose up -d --build
+    - mvn test -DbaseUrl=http://localhost:8070/api
+    - docker-compose down
+
 branches:
   only:
   - master
