--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -14,8 +14,10 @@ services:
     build:
       dockerfile: Dockerfile
       context: ../..
+      args:
+        ADDITIONAL_MAVEN_BUILD_ARGS: -DskipTests -q
     volumes:
-      - ./config/dhis2_home:/DHIS2_home
+      - ./config/dhis2_home/dhis.conf:/DHIS2_home/dhis.conf
     depends_on:
       - db
     ports:
