Add V{org_unit_count} for program indicators

--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -1526,6 +1526,7 @@ current_date=Current date
 value_count=Value count
 zero_pos_value_count=Zero or positive value count
 event_count=Event count
+org_unit_count=Organisation unit count
 enrollment_count=Enrollment count
 tei_count=Tracked entity instance count
 dhis-web-settings=System Settings
