Update HibernateGenericStore to support JsonB AttributeValues.

--- a/dhis-2/dhis-support/dhis-support-test/src/main/resources/log4j.properties
+++ b/dhis-2/dhis-support/dhis-support-test/src/main/resources/log4j.properties
@@ -13,3 +13,6 @@ log4j.category.com.hazelcast = WARN
 log4j.category.org.testcontainers = INFO
 logging.category.org.springframework.web =  WARN
 logging.category.org.springframework.test =  WARN
+
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type=TRACE
