--- a/dhis-2/dhis-services/pom.xml
+++ b/dhis-2/dhis-services/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis</artifactId>
-    <version>2.31.3</version>
+    <version>2.31.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>dhis-services</artifactId>
