--- a/dhis-2/dhis-web/pom.xml
+++ b/dhis-2/dhis-web/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis</artifactId>
-    <version>2.32-SNAPSHOT</version>
+    <version>2.32.0-FF</version>
   </parent>
   <artifactId>dhis-web</artifactId>
   <packaging>pom</packaging>
