--- a/dhis-2/dhis-support/dhis-support-db-migration/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-db-migration/pom.xml
@@ -20,6 +20,7 @@
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
     </dependency>
+
      <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
@@ -29,6 +30,11 @@
     <dependency>
      <groupId>org.hisp.dhis</groupId>
      <artifactId>dhis-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-external</artifactId>
     </dependency>
     
     <!-- Jackson -->
