--- a/dhis-2/dhis-support/dhis-support-expression-parser/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-expression-parser/pom.xml
@@ -11,7 +11,7 @@
   
   <artifactId>dhis-support-expression-parser</artifactId>
   <packaging>jar</packaging>
-  <name>DHIS Parser Support</name>
+  <name>DHIS Expression Parser Support</name>
   
   <dependencies>
 
@@ -20,6 +20,11 @@
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-jdbc</artifactId>
     </dependency>
 
     <!-- ANTLR -->
