--- a/dhis-2/dhis-api/pom.xml
+++ b/dhis-2/dhis-api/pom.xml
@@ -147,6 +147,11 @@
       <groupId>com.vividsolutions</groupId>
       <artifactId>jts-io</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
