--- a/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
+++ b/dhis-2/dhis-services/dhis-service-core/src/main/resources/i18n_global.properties
@@ -52,7 +52,7 @@ dhis-web-capture=Capture
 dhis-web-event-reports=Event Reports
 dhis-web-event-visualizer=Event Visualizer
 dhis-web-tracker-capture=Tracker Capture
-dhis-web-reports=Reports
+dhis-web-reports=Reports (Beta)
 dhis-web-cache-cleaner=Browser Cache Cleaner
 dhis-web-reporting=Reports
 dhis-web-light=Mobile (Light)
@@ -133,7 +133,7 @@ M_dhis-web-pivot=Pivot Table app
 M_dhis-web-sms=SMS app
 M_dhis-web-tracker-capture=Tracker Capture app
 M_dhis-web-capture=Capture app
-M_dhis-web-reports=Reports app
+M_dhis-web-reports=Reports app (Beta)
 M_dhis-web-event-visualizer=Event Visualizer app
 M_dhis-web-cache-cleaner=Browser Cache Cleaner app
 M_dhis-web-translations=Translations app
