--- a/dhis-2/dhis-support/dhis-support-amqp/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-amqp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis-support</artifactId>
-    <version>2.32.0-SNAPSHOT</version>
+    <version>2.32.0-rc2</version>
   </parent>
 
   <artifactId>dhis-support-amqp</artifactId>
