--- a/dhis-2/dhis-api/pom.xml
+++ b/dhis-2/dhis-api/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis</artifactId>
-    <version>2.32.0-SNAPSHOT</version>
+    <version>2.32.0</version>
   </parent>
 
   <artifactId>dhis-api</artifactId>
