Provides changes for integrating TECH-175 from 2.32 into 2.31.
- Part of TECH-175.

--- a/dhis-2/dhis-services/dhis-service-node/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-node/pom.xml
@@ -48,6 +48,9 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <!-- use different version for tests in this artifact due to version conflict (solved for project in 2.32) -->
+      <version>1.10.19</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
