--- a/dhis-2/dhis-e2e-test/docker-compose.e2e.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.e2e.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   e2e-test:
     stdin_open: true
-    image: dhis2-e2e:${TAG}
+    image: core-api-tests:${TAG}
     build:
       dockerfile: Dockerfile
       context: .
