Explicitly adding logging driver

--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -11,6 +11,8 @@ services:
 
   e2e-test-web:
     image: "${IMAGE_NAME}"
+    logging:
+      driver: "json-file"
     build:
       dockerfile: Dockerfile
       context: ../..
