--- a/dhis-2/dhis-e2e-test/docker-compose.e2e.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.e2e.yml
@@ -3,9 +3,5 @@ version: '3'
 services:
   e2e-test:
     stdin_open: true
-    image: core-api-tests:${IMAGE_TAG}
-    build:
-      dockerfile: Dockerfile
-      context: .
-
+    image: {IMAGE_NAME}
     command: ./wait-for-it.sh e2e-test-web:8080 -- mvn test -DbaseUrl=http://e2e-test-web:8080/api -DsuperUserUsername=taadmin -DsuperUserPsw=Test1212?
