--- a/dhis-2/dhis-e2e-test/docker-compose.yml
+++ b/dhis-2/dhis-e2e-test/docker-compose.yml
@@ -10,10 +10,7 @@ services:
       POSTGRES_PASSOWRD: dhis
 
   e2e-test-web:
-    image: dhis2/dhis2-core:dev-latest
-    build:
-      dockerfile: Dockerfile
-      context: ../..
+    image: "${IMAGE_NAME}"
     volumes:
       - ./config/dhis2_home/dhis.conf:/DHIS2_home/dhis.conf
     depends_on:
