Add Prometheus exporters for monitoring (#3355)
* Add pie chart migration routine

* Add Prometheus exporters for monitoring

- Add Micrometer (https://micrometer.io/) for Promethues integration
- Add JVM Metrics exporter
- Add Connection Pool metrics
- Add Filter to instrument all API calls and enable metrics
- Add Controller to expose Promethues metrics

* Clean up

* Add Tomcat metrics configuration

* Add Hibernate metrics configuration

* Add configuration keys to enable metrics

- Moved metrics classes to `dhis-support-system`
- Code cleanup

* Merge Metadata import and export controller into a single controller

- Micrometer MVC filter doesn't work with multiple controllers sharing
the same mapping

* Made all metrics disabled when running tests

* Changed Prometheus Controller to be available when not running tests

* Fix codestyle

* Minor

* Removed Tomcat metrics

- Code cleanup after review

* Add test dependency to Servlet API to fix failing test

* Move Web Api Metrics config class to Web module

- The Web Api Metric configuration class has a dependency to Servlet
Filter which causes some tests to fail

--- a/dhis-2/dhis-support/dhis-support-system/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-system/pom.xml
@@ -213,6 +213,17 @@
       <artifactId>javacsv</artifactId>
     </dependency>
 
+    <!-- application monitoring -->
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-spring-legacy</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+    </dependency>
+
     <!-- Test -->
 
     <dependency>
