--- a/dhis-2/dhis-support/pom.xml
+++ b/dhis-2/dhis-support/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.hisp.dhis</groupId>
     <artifactId>dhis</artifactId>
-    <version>2.31.4</version>
+    <version>2.31.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>dhis-support</artifactId>
