Clean up code and add unit test for manager.getAllValuesByAttributes

--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -196,6 +196,12 @@
       <artifactId>hamcrest-library</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>6.0.5</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <properties>
     <rootDir>../../</rootDir>
