--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/WEB-INF/web.xml
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,10 @@
     <async-supported>true</async-supported>
   </filter>
   <filter>
+    <filter-name>secureSessionCookieFilter</filter-name>
+    <filter-class>org.hisp.dhis.servlet.filter.SecureSessionCookieFilter</filter-class>
+  </filter>
+  <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <async-supported>true</async-supported>
@@ -100,6 +104,10 @@
   </filter-mapping>
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>secureSessionCookieFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <filter-mapping>
