Add new set of SMS listeners (#3600)
* feat: add new SMS listeners

* fix: ensure new SMS listeners use component annotation

* fix: split up the new SMS listener tests

* fix: incorrect ids being stored for users in SMS metadata

* fix: use new HashSet for event values

* fix: ensure imports are complete for HashSet

* fix: use LogFactory for logging

* fix: ensure 2019 license is at top of files

* fix: add hasOrganisationUnit to DataSet and use it in SMS

* fix: add license to the top of SMS listener tests

* fix: change Aggregate Listener test

* feat: add SQL query to get de uids

* fix: ensure we keep imports the same order

* feat: add SQL query to get ou uids

* refactor: move Uid created before to generic Hibernate class

* revert: changes to DataElement and OrgUnits

* fix: use generic Uid created before method in sms listeners

* fix: use generic Uid created before method in sms listener tests

* rename: NewSMSListener to CompressionSMSListener

* refactor: small logging and renaming for SMS listeners

--- a/dhis-2/dhis-services/dhis-service-core/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-core/pom.xml
@@ -22,6 +22,13 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <!-- DHIS -->
@@ -54,10 +61,10 @@
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-support-hibernate</artifactId>
     </dependency>
-      <dependency>
-        <groupId>org.hisp.dhis</groupId>
-        <artifactId>dhis-support-expression-parser</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-expression-parser</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-support-test</artifactId>
@@ -163,6 +170,11 @@
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.eHealthAfrica</groupId>
+      <artifactId>dhis2-sms-compression</artifactId>
+      <version>0.1.7</version>
     </dependency>
 
     <!-- Security -->
