--- a/dhis-2/dhis-support/dhis-support-amqp/pom.xml
+++ b/dhis-2/dhis-support/dhis-support-amqp/pom.xml
@@ -46,6 +46,10 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
