- Minor refactor - Introduced Hibernate Listeners to fire Audit events - Introduced AuditConsumer service, to consume Audit messages - Removed Audit code from metadata service

--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -432,6 +432,12 @@
       </dependency>
       <dependency>
         <groupId>org.hisp.dhis</groupId>
+        <artifactId>dhis-service-audit-consumer</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hisp.dhis</groupId>
         <artifactId>dhis-support-jdbc</artifactId>
         <version>${project.version}</version>
       </dependency>
