--- a/dhis-2/dhis-services/dhis-service-audit-consumer/pom.xml
+++ b/dhis-2/dhis-services/dhis-service-audit-consumer/pom.xml
@@ -2,60 +2,47 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
+  
   <parent>
     <groupId>org.hisp.dhis</groupId>
-    <artifactId>dhis-support</artifactId>
+    <artifactId>dhis-services</artifactId>
     <version>2.34-SNAPSHOT</version>
   </parent>
-
-  <artifactId>dhis-support-artemis</artifactId>
+  
+  <artifactId>dhis-service-audit-consumer</artifactId>
   <packaging>jar</packaging>
-  <name>DHIS Artemis AMQP/JMS Support</name>
-
+  <name>DHIS Audit consumer service</name>
+  
   <dependencies>
-
+    
     <!-- DHIS -->
+    
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
-      <artifactId>dhis-support-external</artifactId>
+      <artifactId>dhis-support-artemis</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-service-schema</artifactId>
     </dependency>
-    <!-- Other -->
     <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>artemis-server</artifactId>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-hibernate</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>artemis-amqp-protocol</artifactId>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-test</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.qpid</groupId>
-      <artifactId>qpid-jms-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.qpid</groupId>
-      <artifactId>proton-j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jms</artifactId>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-support-system</artifactId>
     </dependency>
 
   </dependencies>
-
   <properties>
     <rootDir>../../</rootDir>
   </properties>
