refactor: use configurable dockerfiles for tomcat

--- a/docker/tomcat-debian/Dockerfile
+++ b/docker/tomcat-debian/Dockerfile
@@ -1,12 +1,13 @@
 # Build argument used to customize the base DHIS2 core image.
 # Needs to be an image that has the file: `/dhis.war`
 
-ARG image
-FROM $image as build
+ARG core_image
+FROM $core_image as build
 
 # Application server
 
-FROM tomcat:8.5.46-jdk8-openjdk-slim
+ARG tomcat_image=tomcat:8.5-jdk8-openjdk-slim
+FROM $tomcat_image
 
 ENV DHIS2_HOME=/DHIS2_home
 
