--- a/dhis-2/dhis-services/pom.xml
+++ b/dhis-2/dhis-services/pom.xml
@@ -57,6 +57,6 @@
     </dependency>
   </dependencies>
   <properties>
-    <rootDir>../</rootDir>
+    <rootDir>../../</rootDir>
   </properties>
 </project>
